# Ultra-Light-Fast-Generic-Face-Detector-1MB

./: .gitignore  convert_to_onnx.py  detect_imgs.py  detector.py  run_video_face_detect.py  run_video_face_detect.sh  slim_model.py  train-dataset-oid-version-RFB.sh  train-version-RFB-mask.sh  train-version-RFB.sh  train-version-slim-mask.sh  train.py  train.sh
data/: wider_face
models/: voc-model-labels.txt
ncnn/: CMakeLists.txt
ncnn/src/: UltraFace.cpp  UltraFace.hpp  main.cpp
rknn/: fine_tune_dataset.py  test_pytorch.py  test_widerface.py
vision/datasets/: brain_dataset.py  helmet_dataset.py  oid_dataset.py
vision/nn/: mb_tiny.py  mb_tiny_RFB.py  mb_tyny.onnx  mb_tyny_rfb.onnx
vision/ssd/: data_preprocessing.py  mb_tiny_fd.py  predictor.py  ssd.py
vision/transforms/: transforms.py
widerface_evaluate/: evaluation_on_widerface.py
